syntax = "proto3";
package org.nd4j.ir;
option java_outer_classname = "MapperNamespace";


message MappingRule {
  string ruleName = 1;
  string functionName = 2;
  repeated string inputStringAttrName = 3;
  repeated string outputStringAttrName = 4;
  repeated string inputIntName = 5;
  repeated  string outputIntName = 6;
  repeated string  inputFloatName = 7;
  repeated string outputFloatName = 8;
  repeated string  inputDoubleName = 9;
  repeated string outputDoubleName = 10;
  repeated string  inputBooleanName = 11;
  repeated string outputBooleanName = 12;
  repeated string inputTensorName = 13;
  repeated string outputTensorName = 14;
}



message MapperDeclaration {
  string frameworkName = 1;
  string opName = 2;
  //the rules to apply for attributes
  repeated MappingRule rule = 3;

}

enum OpListType {
  TARG = 0;
  IARG = 1;
  BARG = 2;
  DTYPEARG = 3;
  INPUTARG = 4;
  OUTPUTARG = 5;
  AXISARG = 6;
}
